# stl-render

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE  PLAN.md  README.md
fixtures/: assembly.3mf  colored_cube.3mf  components.3mf  cube.3mf  cube.stl  cube_ascii.stl  cylinder.stl  degenerate.stl  flat_tile.stl  long_beam.stl  missing_model.3mf  multi_object.3mf  single_triangle.3mf  single_triangle.stl  single_triangle_ascii.stl  sphere.3mf  sphere.stl  tall_column.stl  truncated.stl
src/: camera.rs  cli.rs  lib.rs  main.rs  mesh.rs  output.rs  overlay.rs  render.rs
src/stl/: ascii.rs  binary.rs  mod.rs  parser.rs
src/tmf3/: mod.rs  parser.rs
tests/: integration.rs
tools/fixtures/: README.md  generate_fixtures.py  pyproject.toml
