[package]
name = "stl-render"
version = "0.1.0"
edition = "2024"
description = "Fast, headless CLI tool to render STL files to PNG images"
license = "MIT"
repository = "https://github.com/jmkent/stl-render"

[dependencies]
clap = { version = "4", features = ["derive"] }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
