[package]
name = "stl-render"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Fast, headless CLI tool to render STL files to PNG images"
license = "MIT"
repository = "https://github.com/jmkent/stl-render"
homepage = "https://github.com/jmkent/stl-render"
documentation = "https://docs.rs/stl-render"
readme = "README.md"
keywords = ["stl", "render", "3d-printing", "cli", "headless"]
categories = ["command-line-utilities", "graphics", "rendering"]
exclude = ["examples/", "fixtures/", "tools/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
memmap2 = "0.9"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
